--- a/content/posts/2022-09-29-dwm.md
+++ b/content/posts/2022-09-29-dwm.md
@@ -1,10 +1,10 @@
 ---
 title: "Dwm初体验"
 date: 2022-09-29T23:42:41+08:00
-tags: ["wm","linux"]
+tags: ["wm", "linux"]
 layout: post
 cover:
-    image: "/images/Pasted%20image%2020230126191021.png"
+  image: "/images/20230126191021.png"
 ---
 
 ## 安装
@@ -17,8 +17,8 @@ sudo make clean install
 
 ## 启动
 
-如果已经有了sddm,可以使用`sudo systemctl disable sddm.service`
-来进行关闭,如果到时候不想用了可以用`sudo systemctl enable sddm.service`来开启sddm.
+如果已经有了 sddm,可以使用`sudo systemctl disable sddm.service`
+来进行关闭,如果到时候不想用了可以用`sudo systemctl enable sddm.service`来开启 sddm.
 
 ```shell
 # 准备配置文件
@@ -42,15 +42,15 @@ exec dwm
 
 ### 直接断网
 
-使用NetworkManager进行连接,可能要用到`dhcpcd`.
+使用 NetworkManager 进行连接,可能要用到`dhcpcd`.
 
 ```shell
 nmcli device wifi list
-nmcli device wifi connect {{wifi name}} password {{pwd}}
+nmcli device wifi connect ${wifi name} password ${pwd}
 ```
 
 可能会连接失败,你可以试试`nmcli connection show`
-来查看是否存在以前的连接信息,可以用`nmcli connection delete {{wifi name}}`来删除对应的信息
+来查看是否存在以前的连接信息,可以用`nmcli connection delete ${wifi name}`来删除对应的信息
 
 ### 输入法失效
 
@@ -91,48 +91,48 @@ xrandr --output eDP-1-1  --auto --below HDMI-0
 
 `MOD` -> `WIN`
 
-| 快捷键               | desc |
-|-------------------|------|
+| 快捷键            | desc     |
+| ----------------- | -------- |
 | `MOD+SHIFT+ENTER` | 新开终端 |
 
-### 在本tag内切换聚焦窗口
+### 在本 tag 内切换聚焦窗口
 
-| 快捷键          | desc                          |
-|--------------|-------------------------------|
-| `ALT + tab`  | 切换聚焦窗口                        |
-| `MOD + up`   | 切换聚焦窗口                        |
-| `MOD + down` | 切换聚焦窗口                        |
+| 快捷键       | desc         |
+| ------------ | ------------ |
+| `ALT + tab`  | 切换聚焦窗口 |
+| `MOD + up`   | 切换聚焦窗口 |
+| `MOD + down` | 切换聚焦窗口 |
 
-### 跨tag操作
+### 跨 tag 操作
 
-| 快捷键                          | desc                          |
-|------------------------------|-------------------------------|
-| `MOD + left / right`         | 切换tag                         |
-| `MOD + SHIGT + left / tight` | 将当前窗口移动到其他tag                 |
-| `MOD + a`                    | 第一次是显示所有tag,第二次是跳转到聚焦的窗口所在的窗口 |
+| 快捷键                       | desc                                                    |
+| ---------------------------- | ------------------------------------------------------- |
+| `MOD + left / right`         | 切换 tag                                                |
+| `MOD + SHIGT + left / tight` | 将当前窗口移动到其他 tag                                |
+| `MOD + a`                    | 第一次是显示所有 tag,第二次是跳转到聚焦的窗口所在的窗口 |
 
 ### 窗口操作
 
-| 快捷键                | desc            |
-|--------------------|-----------------|
-| `MOD + q`          | 退出窗口            |
-| `MOD + h`          | 隐藏窗口            |
-| `MOD + SHIFT + h`  | 显示窗口（像一个栈一样.）   |
-| `MOD + ENTER`      | 将当前窗口设置为主窗口     |
-| `MOD + f`          | 将当前窗口全屏         |
-| `MOD + CTRL + 方向键` | 移动窗口            |
-| `MOD + ALT + 方向键`  | 调整窗口大小          |
-| `MOD + o`          | 只显示当前窗口/显示所有窗口  |
-| `MOD + t`          | 开启/关闭 聚焦目标的浮动模式 |
-| `MOD + SHIFT + t`  | 开启/关闭 全部目标的浮动模式 |
+| 快捷键                | desc                         |
+| --------------------- | ---------------------------- |
+| `MOD + q`             | 退出窗口                     |
+| `MOD + h`             | 隐藏窗口                     |
+| `MOD + SHIFT + h`     | 显示窗口（像一个栈一样.）    |
+| `MOD + ENTER`         | 将当前窗口设置为主窗口       |
+| `MOD + f`             | 将当前窗口全屏               |
+| `MOD + CTRL + 方向键` | 移动窗口                     |
+| `MOD + ALT + 方向键`  | 调整窗口大小                 |
+| `MOD + o`             | 只显示当前窗口/显示所有窗口  |
+| `MOD + t`             | 开启/关闭 聚焦目标的浮动模式 |
+| `MOD + SHIFT + t`     | 开启/关闭 全部目标的浮动模式 |
 
-| `MOD + SHIFT + f`  | 开启/关闭 状态栏 |
+| `MOD + SHIFT + f` | 开启/关闭 状态栏 |
 
 ### 切换屏幕
 
-| 快捷键               | desc         |
-|-------------------|--------------|
-| `MOD + x`         | 将鼠标移动到其他屏幕   |
+| 快捷键            | desc                     |
+| ----------------- | ------------------------ |
+| `MOD + x`         | 将鼠标移动到其他屏幕     |
 | `MOD + SHIFT + X` | 将当前窗口移动到其他屏幕 |
 
 ## 更新
@@ -148,9 +148,10 @@ xrandr --output eDP-1-1  --auto --below HDMI-0
 `click`就是点击时调用的方法,`wezterm start --class float ranger`我这一段就是启动 wezterm 并调用 ranger.
 
 ![img.png](/images/11.png)
+
 ## Links
 
-- [ArchWiki Dwm](https://wiki.archlinux.org/title/Dwm_(%E7%AE%80%E4%BD%93%E4%B8%AD%E6%96%87))
+- [ArchWiki Dwm](<https://wiki.archlinux.org/title/Dwm_(%E7%AE%80%E4%BD%93%E4%B8%AD%E6%96%87)>)
 - [Dwm patches](https://dwm.suckless.org/patches/)
-- [Dwm patches中文翻译](https://github.com/Katzeee/dwm-patches-chinese/blob/master/dwm-patches-chinese.md)
-- [picom美化](https://yaocc.cc/2022/06/19/linux%E4%B8%9D%E6%BB%91%E7%9A%84%E5%8A%A8%E7%94%BB%E4%BD%93%E9%AA%8C%E2%80%94%E2%80%94picom/)
+- [Dwm patches 中文翻译](https://github.com/Katzeee/dwm-patches-chinese/blob/master/dwm-patches-chinese.md)
+- [picom 美化](https://yaocc.cc/2022/06/19/linux%E4%B8%9D%E6%BB%91%E7%9A%84%E5%8A%A8%E7%94%BB%E4%BD%93%E9%AA%8C%E2%80%94%E2%80%94picom/)
