--- a/content/posts/2023-02-13-asd.md
+++ b/content/posts/2023-02-13-asd.md
@@ -2,14 +2,14 @@
 title: "用 Rust 写的弹窗翻译软件"
 date: 2023-02-13T20:10:04+08:00
 layout: post
-tags: ["project","rust"]
+tags: ["project", "rust"]
 ---
 
 项目地址： https://github.com/fzdwx/popup-translation
 
 基本原理就是通过 wry 打开一个 webview 窗口,然后打开某个翻译平台的网页翻译内容,并通过 js 代码屏蔽掉不需要的内容,专注于翻译内容本身.
 
-![弹窗示例](/images/Pasted%20image%2020230213201701.png)
+![弹窗示例](/images/20230213201701.png)
 
 当前获取需要被翻译的内容是从 粘贴板 中读取的（当然也可以直接指定 `fanyi hello`）,在
 Linux(x11) 下支持直接翻译被鼠标选中的内容（即不需要复制到粘贴板中）.
