New post vitepress blog

--- a/content/posts/2023-03-22-web-font.md
+++ b/content/posts/2023-03-22-web-font.md
@@ -3,7 +3,7 @@ title: "浏览器字体加重不生效"
 date: 2023-03-22T20:32:27+08:00
 update: 2023-03-22T20:32:27+08:00
 layout: post
-tags: [front,vitepress]
+tags: [web]
 ---
 
 > 最近在研究 `vitepress` 的主题, 准备把博客从 `hugo` 改成 `vitepress`(因为 `vitepress` 的代码块比 `hugo` 的好看).
