--- a/content/posts/2023-02-13-asd.md
+++ b/content/posts/2023-02-13-asd.md
@@ -5,11 +5,19 @@ layout: post
 tags: ["project", "rust"]
 ---
 
-项目地址： https://github.com/fzdwx/popup-translation
+项目地址： https://github.com/fzdwx/popup-translation, 目前已经用 tauri + vue3 改写了
 
-基本原理就是通过 wry 打开一个 webview 窗口,然后打开某个翻译平台的网页翻译内容,并通过 js 代码屏蔽掉不需要的内容,专注于翻译内容本身.
+支持两种模式:
 
-![弹窗示例](/images/20230213201701.png)
+1. 聚合模式, 一次性请求所有的平台
+2. 单平台模式, 一次请求一个平台
 
-当前获取需要被翻译的内容是从 粘贴板 中读取的（当然也可以直接指定 `fanyi hello`）,在
-Linux(x11) 下支持直接翻译被鼠标选中的内容（即不需要复制到粘贴板中）.
+然后还添加了配置功能, 可以自定义快捷键等, 以及最重要的 划词翻译, 也就是选中文本后, 按下快捷键, 就会弹出翻译窗口.
+
+不过只测试 linux(x11) 上的运行情况
+
+使用 tauri 的话好处就是打包分发的包很小, 但是缺点就是编译太慢了, 好在可以用 github action release.
+
+![123123](/images/2023-03-28-17-57-41.png)
+
+![123123](/images/2023-03-28-17-30-31.png)
