--- a/content/qas/2023-04-29-MySQL 事务.md
+++ b/content/qas/2023-04-29-MySQL 事务.md
@@ -5,12 +5,14 @@ layout: "qa"
 tags: [MySQL]
 ---
 
+## 事务
+
 1. 原子性(Atomicity): 事务是最小的执行单位，不允许分割。事务的原子性确保动作要么全部完成，要么完全不起作用；
 2. 一致性(Consistency): 执行事务前后，数据保持一致，例如转账业务中，无论事务是否成功，转账者和收款人的总额应该是不变的；
 3. 隔离性(Isolation): 并发访问数据库时，一个用户的事务不被其他事务所干扰，各并发事务之间数据库是独立的；
 4. 持久性(Durability): 一个事务被提交之后。它对数据库中数据的改变是持久的，即使数据库发生故障也不应该对其有任何影响
 
-## 脏读
+### 脏读
 
 > 读取到未提交的数据
 
@@ -18,7 +20,7 @@ tags: [MySQL]
 
 但这时其他事务读取了当前事务还未提交的数据, 当前事务回滚了, 那么第二个事务读取到的数据就是脏数据.
 
-## 不可重复读
+### 不可重复读
 
 > 同一事务内对同一数据读取的内容不一致
 
@@ -28,13 +30,13 @@ tags: [MySQL]
 
 第二个事务进行修改并提交, 这样就会导致第一个事务读取到的数据和之前读取到的数据不一致.
 
-## 幻读
+### 幻读
 
 > 同一事务多次读取时, 发现多了一些原本不存在的数据
 
 一个事务读取了几行数据, 接着另一个事务插入了一些数据, 在随后的查询中, 第一个事务就会发现多了一些原本不存在的数据
 
-# 事务隔离级别
+## 事务隔离级别
 
 MySQL 的隔离级别基于锁和 MVCC 机制共同实现的. MySQL 默认隔离级别的 可重复读
 
