feat: blog page add tags

--- a/content/blog/2022-12-10-risc-v.md
+++ b/content/blog/2022-12-10-risc-v.md
@@ -1,7 +1,7 @@
 ---
 title: "RISC-V 简介"
 date: 2022-12-10T20:41:41+08:00
-tags: [risc-v, os, asm]
+tags: [riscv, os, asm]
 summary: RISC-V 是一种指令集(汇编语言),是一种 low-level 的编程语言,高级语言通过编译器编译到汇编语言
 ---
 
