--- a/content/blog/2023-06-12-launcher.md
+++ b/content/blog/2023-06-12-launcher.md
@@ -1,22 +1,21 @@
 ---
-title: "一个 application launcher"
+title: "一个 Application launcher"
 date: "2023-06-12T21:37:57+08:00"
 layout: "blog"
 tags: [ launcher,project ]
 ---
 
 这两天写一个 linux only 的 [application launcher](https://github.com/fzdwx/launcher),
-用于替代 [rofi](/blog/2022-09-18-about-rofi). 在 linux 平台上的 launcher 都很简陋, KDE
-上提供了一个不错的 launcher:Krunner, 但是它只能在 KDE 上使用,
-而我目前使用的是 dwm, 在加上最近 raycast 大火, 我关注的各个 up 都有在用...
+用于替代 [rofi](/blog/2022-09-18-about-rofi).
+在 linux 平台上的启动器都很简陋, KDE 上提供了 Krunner, 但是它只能在 KDE 上使用,
+以及最近 raycast 大火, 我关注的各个 up 都有在用...
 
 ## 实现思路
 
 还是使用 webview 来使用, 前面了解过 [tauri](https://github.com/tauri-apps/tauri), 但是它的开发体验不是很好, rust
 的热加载太慢了, 所以选择了的 go 中的 [wails](https://github.com/wailsapp/wails).
 
-ui 主要使用了 [vue-command-palette](https://github.com/xiaoluoboding/vue-command-palette) 这个库,
-可以说没有这个库,就没有这个项目了.
+ui 主要使用了 [vue-command-palette](https://github.com/xiaoluoboding/vue-command-palette) 这个库, 可以说没有这个库,就没有这个项目了.
 
 ![img](/images/img_10.png)
 
