--- a/content/blog/2023-02-01-bufline.md
+++ b/content/blog/2023-02-01-bufline.md
@@ -3,7 +3,7 @@ title: "自定义一个 Neovim bufferline"
 date: 2023-02-01T23:59:53+08:00
 tags: ["project", "nvim"]
 cover:
-  image: /images/img%201.png
+  image: /images/img_1_1.png
 ---
 
 > 现在比较流行的 buffer line 插件是 [akinsho/bufferline](https://github.com/akinsho/bufferline.nvim),但是我感觉他太重了,而且不好看.比如说它可以跟 lsp 集成,可以切换各种 tab/buffer 模式等,但是不一定每个人都需要,而且各个顺序都固定了,总之就是*我想造轮子*: [fzdwx/bufline.nvim](https://github.com/fzdwx/bufline.nvim.git)
