update nuxt content to 2.7.1

--- a/content/blog/2023-01-26-hyprland.md
+++ b/content/blog/2023-01-26-hyprland.md
@@ -4,7 +4,7 @@ date: 2023-01-26T11:04:48+08:00
 tags: [linux,wm]
 ---
 
-今天简单尝试了一下 [Hyprland](https://hyprland.org/),它的功能类似于 [DWM](/content/posts/2022-09-29-dwm) + picom 的组合.只是粗略的尝试了一下,发现还是有一些问题:
+今天简单尝试了一下 [Hyprland](https://hyprland.org/),它的功能类似于 [DWM](/blog/2022-09-29-dwm) + picom 的组合.只是粗略的尝试了一下,发现还是有一些问题:
 1. 分屏的时候,扩展屏幕的光标不显示
 	-  设置 `WLR_NO_HARDWARE_CURSORS=1`  即可解决
 2. 扩展屏幕不时有一些黑块闪烁
