chore: update posts

--- a/content/blog/2023-10-23-wu-hua.md
+++ b/content/blog/2023-10-23-wu-hua.md
@@ -2,12 +2,13 @@
 title: ClickHouse 物化 MySQL
 date: 2023-10-23 10:55:26
 tags: [clickhouse]
-hidden: false
+hidden: true
 ---
 
-:RefTimeline{id=7354350}
 
 ### 配置部分
+
+:RefTimeline{id=7354350}
 
 MySQL 需要创建一个用户,并授予对应的权限并开启 `bin log`
 
