feat: update posts

--- a/content/blog/2023-10-27-cmu-fall-2023-p0.md
+++ b/content/blog/2023-10-27-cmu-fall-2023-p0.md
@@ -19,7 +19,7 @@ node). 比如, 考虑插入 KV 键值对 `("ab",1)` 和 `("ac","val")` 到字典
 
 这两个 Key 共享相同的父节点. 与 "ab" 对应的 Value 存储在左边, 而 "ac" 对应的 Value 存储在右边.
 
-### TASK #1 Copy On Write Trie
+### Task #1 Copy On Write Trie
 
 在这个任务中, 你需要修改 `trie.h` 和 `trie.cpp` 来实现一个 Cow trie. 在一个 Cow trie 中, 操作不直接修改原始节点.
 相反的，在修改数据时会创建一个新的节点, 并返回一个新的根节点来表示新修改的 trie. Cow 允许我们在每个操作后的任意时间以最小的花销访问
@@ -49,4 +49,12 @@ removal 后清除所有不必要的节点. 一个空的 trie 可以使用 `nullp
 
 要创建一个全新的节点(没有子节点的节点), 你可以使用 `TrieNodeWithValue` 构造函数来构造对象然后将其转换为 smart pointer.
 要进行 Cow 创建节点, 你应该使用 `TrieNode` 的 `Clone` 函数. 要在新 trie 中重用现有节点, 你可以复制 `std::shard_ptr<
-TrieNode >`: 复制共享指针时不会复制底层数据. 你不应该在该项目中使用 `new` 和 `delete` 来手动分配内存。
+TrieNode >`: 复制共享指针时不会复制底层数据. 你不应该在该项目中使用 `new` 和 `delete` 来手动分配内存. 当没有任何人引用底层对象时 `std::shared_ptr`
+将会释放对象.
+
+有关这些操作的所有规范, 请参阅起始代码中的注释. 你的实现应该参照上述方式存储数据. 不要存储 c 中的字符串终止符 `\0` 到你的 trie 中.
+另外，请避免删除类定义中的任何 `const` 或者使用 `mutable/const_cast` 来绕过 const 检查.
+
+### Task #2 Concurrent Key - Value Store
+
+tbd https://15445.courses.cs.cmu.edu/fall2023/project0/
