feat: update posts

--- a/content/blog/2023-10-27-cmu-fall-2023-p0.md
+++ b/content/blog/2023-10-27-cmu-fall-2023-p0.md
@@ -2,6 +2,7 @@
 title: 15-445 CMU Fall 2023 Project 0 翻译
 date: 2023-10-27 20:32:40
 tags: [ database ]
+description: cmu445 project0 翻译 
 ---
 
 ## Project specification
